--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^16.3.1",
     "@supabase/supabase-js": "^2.39.0",
     "node-fetch": "^2.7.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "@google/genai": "^0.5.0"
   },
   "engines": {
     "node": ">=20.0.0"
